--- a/src/App.css
+++ b/src/App.css
@@ -99,7 +99,7 @@ body{
   overflow-y: scroll;
   max-width: 90vw;
   scroll-behavior: smooth;
-  scroll-snap-align: y mandatory;
+  scroll-snap-type: y mandatory;
 }
 
 #info{
@@ -398,7 +398,7 @@ body{
   text-align:center;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 10px;
 }
 
 #facultyStatsTitle{
@@ -412,7 +412,7 @@ body{
   border-width: 1px;
   margin: 1em 0;
   padding: 0;
-  margin-left: vw;
+  margin-left: 5vw;
   margin-top: 0px;
 }
 
@@ -458,9 +458,13 @@ body{
 }
 
 #facultyStatsCard{
-  width: 80%;
+  min-width: 27vw;
   border-radius: 10px;
   padding: 10px 20px 10px 10px;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .facultyStatsTitle{
@@ -536,6 +540,36 @@ body{
   margin-top: auto;
   margin-bottom: auto;
   position: relative;
+}
+
+#switchButton{
+  font-size: 10px;
+  line-height: 1.3;
+  padding: 10px 30px 10px 30px;
+}
+
+#topStatsContainer{
+  display: flex;  
+}
+
+#threeCoursesContainer{
+  display: flex;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory;
+  width: 28vw;
+}
+
+.topStatsButton{
+  font-size: 50px;
+  --bs-btn-hover-color: rgba(255,255,255,0.7);
+  --bs-btn-hover-border-color: rgba(0,0,0,0);
+  --bs-btn-hover-bg: rgba(35, 35, 206, 0);
+  --bs-btn-active-bg: rgba(0,0,0,0);
+  --bs-btn-active-color: rgba(255,255,255,0.2);
+  --bs-btn-active-border-color: rgba(0,0,0,0);
+  border-radius: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .meter { 
