--- a/src/App.css
+++ b/src/App.css
@@ -398,7 +398,7 @@ body{
   text-align:center;
   align-items: center;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 #facultyStatsTitle{
@@ -549,7 +549,11 @@ body{
 }
 
 #topStatsContainer{
-  display: flex;  
+  /*display: flex;  */
+}
+
+#coursesButtonsContainer{
+  display: flex;
 }
 
 #threeCoursesContainer{
@@ -557,6 +561,21 @@ body{
   overflow-x: hidden;
   scroll-snap-type: x mandatory;
   width: 30vw;
+}
+
+#navCirclesContainer{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.navCircle{
+  width: 40px;
+  height: 15px;
+  border-radius: 100px;
+  margin-right: 7px;
+  margin-left: 7px;
+  background-color: rgba(0,0,0,0);
 }
 
 .topStatsButton{
